metadata/force-app/main/default/objects/Contact/fields/abRandom__c.field-meta.xml
<CustomField>
    <fullName>abRandom__c</fullName>
    <description>Apex trigger assigns a random number.</description>
    <inlineHelpText>Used for A/B testing</inlineHelpText>
    <label>abRandom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>