metadata/force-app/main/default/objects/Contact/fields/account6QAAgeInDays6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>account6QAAgeInDays6sense_Bynder__c</fullName>
    <description>Days the account has been in 6QA status.</description>
    <label>6sense Account 6QA Age in Days Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>