metadata/force-app/main/default/objects/Contact/fields/account6QAStartDate6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>account6QAStartDate6sense_Bynder__c</fullName>
    <description>The date the account qualified for 6QA status (YYYY-MM-DD).</description>
    <label>6sense Account 6QA Start Date Bynder</label>
    <type>Date</type>
</CustomField>