metadata/force-app/main/default/objects/Contact/fields/Account_CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Owner__c</fullName>
    <formula>Account.CSM_Owner__r.FirstName&amp;&quot; &quot;&amp; Account.CSM_Owner__r.LastName</formula>
    <label>Account CSM Owner</label>
    <type>Text</type>
</CustomField>