metadata/force-app/main/default/objects/Contact/fields/Account_Platform__c.field-meta.xml
<CustomField>
    <fullName>Account_Platform__c</fullName>
    <description>Platform from account level.</description>
    <formula>TEXT(Account.Platform__c)</formula>
    <inlineHelpText>Platform from account level.</inlineHelpText>
    <label>Account Platform</label>
    <type>Text</type>
</CustomField>