metadata/force-app/main/default/objects/Contact/fields/accountBuyingStage6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountBuyingStage6sense_Bynder__c</fullName>
    <label>6sense Account Buying Stage Bynder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>