metadata/force-app/main/default/objects/Contact/fields/Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Date__c</fullName>
    <description>wd mkto field</description>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>