metadata/force-app/main/default/objects/Contact/fields/Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Program__c</fullName>
    <description>wd mkto field</description>
    <label>Acquisition Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>