metadata/force-app/main/default/objects/Contact/fields/Acquisition_Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Program_Id__c</fullName>
    <description>wd mkto field</description>
    <label>Acquisition Program Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>