metadata/force-app/main/default/objects/Contact/fields/Active_Project__c.field-meta.xml
<CustomField>
    <fullName>Active_Project__c</fullName>
    <inlineHelpText>Answer to Question: Do you want to solve them this year?</inlineHelpText>
    <label>Active Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>