metadata/force-app/main/default/objects/Contact/fields/BDR_Reactivated__c.field-meta.xml
<CustomField>
    <fullName>BDR_Reactivated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Outbound Prospecting occurred less than 3 months ago.</description>
    <inlineHelpText>Check this box if Outbound Prospecting occurred less than 3 months ago.</inlineHelpText>
    <label>BDR Outbound Influenced</label>
    <type>Checkbox</type>
</CustomField>