metadata/force-app/main/default/objects/Contact/fields/Behavioral_Content__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Content__c</fullName>
    <description>Used to indicate Behavioral content interaction so we can identify which existing contacts have engaged with the Forrester Wave to add them to a campaign and notify them.</description>
    <label>Behavioral Content</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>More info requested</fullName>
            </value>
            <value>
                <fullName>End WP download</fullName>
            </value>
            <value>
                <fullName>Mid WP download</fullName>
            </value>
            <value>
                <fullName>Top WP download</fullName>
            </value>
            <value>
                <fullName>CS download</fullName>
            </value>
            <value>
                <fullName>Forrester Wave 2022</fullName>
            </value>
            <value>
                <fullName>Forrester Wave 2024</fullName>
            </value>
            <value>
                <fullName>&lt;30 behavioral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>