metadata/force-app/main/default/objects/Contact/fields/bizible2__Ad_Campaign_Name_LC__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
    <label>Ad Campaign Name (LC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>