metadata/force-app/main/default/objects/Contact/fields/bizible2__BizibleId__c.field-meta.xml
<CustomField>
    <fullName>bizible2__BizibleId__c</fullName>
    <label>BizibleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>