metadata/force-app/main/default/objects/Contact/fields/bizible2__Landing_Page_FT__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Landing_Page_FT__c</fullName>
    <label>Landing Page (FT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>