metadata/force-app/main/default/objects/Contact/fields/Budget_For_DAM_Project__c.field-meta.xml
<CustomField>
    <fullName>Budget_For_DAM_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget For DAM / Project</label>
    <type>Checkbox</type>
</CustomField>