metadata/force-app/main/default/objects/Contact/fields/Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for the Business Lead for this account. The Business Lead should be the contact that leads the project and you work with on the day-to-day operations.</inlineHelpText>
    <label>Business Lead</label>
    <type>Checkbox</type>
</CustomField>