metadata/force-app/main/default/objects/Contact/fields/Bynder_WD_Joint__c.field-meta.xml
<CustomField>
    <fullName>Bynder_WD_Joint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bynder/WD Joint</label>
    <type>Checkbox</type>
</CustomField>