metadata/force-app/main/default/objects/Contact/fields/Cadence_id__c.field-meta.xml
<CustomField>
    <fullName>Cadence_id__c</fullName>
    <description>webdam field</description>
    <label>Cadence id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>