metadata/force-app/main/default/objects/Contact/fields/Cadence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Stage__c</fullName>
    <description>Webdam fieldd</description>
    <label>Cadence Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>