metadata/force-app/main/default/objects/Contact/fields/cbit_Clearbit_Ready__c.field-meta.xml
<CustomField>
    <fullName>cbit_Clearbit_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-2808 Clearbit Enrich - Field Creation</description>
    <label>ClearbitReady</label>
    <type>Checkbox</type>
</CustomField>