metadata/force-app/main/default/objects/Contact/fields/Certifications_Attained__c.field-meta.xml
<CustomField>
    <fullName>Certifications_Attained__c</fullName>
    <label>Certifications Attained</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Asset Workflow</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines</fullName>
            </value>
            <value>
                <fullName>Content Workflow</fullName>
            </value>
            <value>
                <fullName>DAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>