metadata/force-app/main/default/objects/Contact/fields/CFCR_FCCRM_Threshold__c.field-meta.xml
<CustomField>
    <fullName>CFCR_FCCRM_Threshold__c</fullName>
    <description>wd field
Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
    <formula>IF(ISPICKVAL(Status__c, &quot;Unqualified&quot;), -200, 

IF(Score__c &gt;=50, 100, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
    <label>FCCRM Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>