metadata/force-app/main/default/objects/Contact/fields/Commercial_contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The &apos;Primary commercial contact&apos; is allowed to be approached by 1. Customer Succes (regarding upsells and Account Management) and by 2. Marketing (for customer nurturing)</inlineHelpText>
    <label>Commercial contact</label>
    <type>Checkbox</type>
</CustomField>