metadata/force-app/main/default/objects/Contact/fields/Community_members_counter__c.field-meta.xml
<CustomField>
    <fullName>Community_members_counter__c</fullName>
    <description>Number of community members linked to this Contact.</description>
    <inlineHelpText>Number of community members linked to this Contact.</inlineHelpText>
    <label>Community members counter</label>
    <summaryForeignKey>Community_Member__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>