metadata/force-app/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The company in which contacts work</description>
    <label>Company</label>
    <type>TextArea</type>
</CustomField>