metadata/force-app/main/default/objects/Contact/fields/Company_size_del__c.field-meta.xml
<CustomField>
    <fullName>Company_size_del__c</fullName>
    <label>Company size from form (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
            <value>
                <fullName>Fortune 500</fullName>
            </value>
            <value>
                <fullName>Local government</fullName>
            </value>
            <value>
                <fullName>State government</fullName>
            </value>
            <value>
                <fullName>Federal government</fullName>
            </value>
            <value>
                <fullName>Non profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>