metadata/force-app/main/default/objects/Contact/fields/Company_size_from_account__c.field-meta.xml
<CustomField>
    <fullName>Company_size_from_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company size from account (Deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts2</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>