metadata/force-app/main/default/objects/Contact/fields/Company_Size_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Grouped__c</fullName>
    <formula>Account.Company_Size_Grouped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Size Grouped</label>
    <type>Text</type>
</CustomField>