metadata/force-app/main/default/objects/Contact/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compelling Event</label>
    <type>Checkbox</type>
</CustomField>