metadata/force-app/main/default/objects/Contact/fields/Completed_Activities__c.field-meta.xml
<CustomField>
    <fullName>Completed_Activities__c</fullName>
    <description>Field that is used in Activity Counter to later timestamp first activity.</description>
    <label>Completed Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>