metadata/force-app/main/default/objects/Contact/fields/Contact_created_date__c.field-meta.xml
<CustomField>
    <fullName>Contact_created_date__c</fullName>
    <formula>CreatedDate</formula>
    <label>Contact created date</label>
    <type>DateTime</type>
</CustomField>