metadata/force-app/main/default/objects/Contact/fields/Contact_Free_to_be_Prospected__c.field-meta.xml
<CustomField>
    <fullName>Contact_Free_to_be_Prospected__c</fullName>
    <description>Red: Contact being worked. Only to be contacted by owner. 
Green: No activity in the last 35 days. Contact free to be prospected.</description>
    <formula>Account.Account_free_to_be_prospected__c</formula>
    <inlineHelpText>Red: Contact being worked. Only to be contacted by owner. 
Green: No activity in the last 35 days. Contact free to be prospected.</inlineHelpText>
    <label>Contact Free to be Prospected?</label>
    <type>Text</type>
</CustomField>