metadata/force-app/main/default/objects/Contact/fields/Contact_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18_digits__c</fullName>
    <description>wd fields</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (18 digits)</label>
    <type>Text</type>
</CustomField>