metadata/force-app/main/default/objects/Contact/fields/Contact_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Team__c</fullName>
    <description>Based on Contact owner Sales team or  BDR Team</description>
    <formula>IF(NOT(ISBLANK(Owner.Sales_Team__c)),
Owner.Sales_Team__c,
IF(NOT(ISBLANK(TEXT(Owner.BDR_Team__c))),
TEXT(Owner.BDR_Team__c),
&apos;&apos;
)
)</formula>
    <label>Contact Owner Team</label>
    <type>Text</type>
</CustomField>