metadata/force-app/main/default/objects/Contact/fields/Contact_Roles__c.field-meta.xml
<CustomField>
    <fullName>Contact_Roles__c</fullName>
    <formula>IF( 
  Power_User__c = TRUE, &quot;Power User&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Executive_Sponsor__c = TRUE, &quot;Champion&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Support_contact__c = TRUE, &quot;Support Contact&quot; + BR(), &quot;&quot;) &amp;
IF(
  Decision_Maker__c = TRUE, &quot;Decision Maker&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Project_Owner__c = TRUE, &quot;Project Owner&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Legal__c = TRUE, &quot;Legal&quot; + BR(), &quot;&quot;) &amp; 
IF( 
  IT_Contact__c = TRUE, &quot;IT Contact&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Procurement__c = TRUE, &quot;Procurement&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Stakeholder__c = TRUE, &quot;Stakeholder&quot; + BR(), &quot;&quot;) &amp;
IF( 
  Finance__c = TRUE, &quot;Finance&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Roles</label>
    <type>Text</type>
</CustomField>