metadata/force-app/main/default/objects/Contact/fields/contactProfileFit6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>contactProfileFit6sense_Bynder__c</fullName>
    <description>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Contact Profile Fit Bynder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>