metadata/force-app/main/default/objects/Contact/fields/contactProfileScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>contactProfileScore6sense_Bynder__c</fullName>
    <description>A measure of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Contact Profile Score Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>