metadata/force-app/main/default/objects/Contact/fields/contactUpdateDate6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>contactUpdateDate6sense_Bynder__c</fullName>
    <description>The latest update date and time when 6sense Scores were updated.</description>
    <label>6sense Contact Update Date Bynder</label>
    <type>Date</type>
</CustomField>