metadata/force-app/main/default/objects/Contact/fields/Country_of_Origin_NEW__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Origin_NEW__c</fullName>
    <label>Country of Origin (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Origin</valueSetName>
    </valueSet>
</CustomField>