metadata/force-app/main/default/objects/Contact/fields/Critical_Event__c.field-meta.xml
<CustomField>
    <fullName>Critical_Event__c</fullName>
    <description>Is there a critical event? E.g. contract of existing supplier is due in december. Or a new solution needs to be in place before the next Fashion Week.</description>
    <inlineHelpText>Is there a critical event? E.g. contract of existing supplier is due in december. Or a new solution needs to be in place before the next Fashion Week.</inlineHelpText>
    <label>Critical Event</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>