metadata/force-app/main/default/objects/Contact/fields/CRMGAC__Total_Closed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Total_Closed_Tasks__c</fullName>
    <label>Total Closed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>