metadata/force-app/main/default/objects/Contact/fields/CRMGAC__Upcoming_Events__c.field-meta.xml
<CustomField>
    <fullName>CRMGAC__Upcoming_Events__c</fullName>
    <label>Upcoming Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>