metadata/force-app/main/default/objects/Contact/fields/CS_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>CS_Qualifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Qualifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>