metadata/force-app/main/default/objects/Contact/fields/CSQL__c.field-meta.xml
<CustomField>
    <fullName>CSQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSQL</label>
    <type>Checkbox</type>
</CustomField>