metadata/force-app/main/default/objects/Contact/fields/CTA_Content__c.field-meta.xml
<CustomField>
    <fullName>CTA_Content__c</fullName>
    <description>BODEV-3355 : Added this field for Qualified</description>
    <label>CTA Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;30 employee demo request</fullName>
            </value>
            <value>
                <fullName>&lt;30 employee pricing request</fullName>
            </value>
            <value>
                <fullName>Callback Request</fullName>
            </value>
            <value>
                <fullName>Content Workflow Demo</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Pricing Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>