metadata/force-app/main/default/objects/Contact/fields/Current_situation_is_known__c.field-meta.xml
<CustomField>
    <fullName>Current_situation_is_known__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current situation is known</label>
    <type>Checkbox</type>
</CustomField>