metadata/force-app/main/default/objects/Contact/fields/Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution__c</fullName>
    <inlineHelpText>Answer to the Question: How do you manage digital files?</inlineHelpText>
    <label>Current Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Server</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Digital Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>