metadata/force-app/main/default/objects/Contact/fields/Customer_Champion_Program__c.field-meta.xml
<CustomField>
    <fullName>Customer_Champion_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created for to check Customer Champion Signup contacts</description>
    <label>Customer Champion Program</label>
    <type>Checkbox</type>
</CustomField>