metadata/force-app/main/default/objects/Contact/fields/Customer_Champions_Points_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Customer_Champions_Points_Accrued__c</fullName>
    <label>Customer Champions Points Accrued</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>