metadata/force-app/main/default/objects/Contact/fields/Customer_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Type__c</fullName>
    <description>Webdam field</description>
    <label>Customer Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Administrator</fullName>
            </value>
            <value>
                <fullName>Secondary Administrator</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Executive Contact</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>WebDAM Employee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>WebDAM DB Admin</fullName>
            </value>
            <value>
                <fullName>Outage Notification Contact</fullName>
            </value>
            <value>
                <fullName>C-Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>