metadata/force-app/main/default/objects/Contact/fields/Customer_owned_pain_points_surrounding_D__c.field-meta.xml
<CustomField>
    <fullName>Customer_owned_pain_points_surrounding_D__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fields used by BDR for lead qualification</description>
    <inlineHelpText>Fields used by BDR for lead qualification</inlineHelpText>
    <label>Customer-Owned Pain Points Regarding DAM</label>
    <type>Checkbox</type>
</CustomField>