metadata/force-app/main/default/objects/Contact/fields/Customer_Stories__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stories__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Customer Stories</label>
    <type>Checkbox</type>
</CustomField>