metadata/force-app/main/default/objects/Contact/fields/CW_Challenges__c.field-meta.xml
<CustomField>
    <fullName>CW_Challenges__c</fullName>
    <description>BO-1759: Used to capture the qualification questions as part of CW standalone Trial demo flow.</description>
    <label>What challenges are you looking to solve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>