metadata/force-app/main/default/objects/Contact/fields/CW_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>CW_Project_Type__c</fullName>
    <description>BO-1759: Used to capture the qualification questions as part of CW standalone Trial demo flow.</description>
    <label>One-off project or on-going</label>
    <length>255</length>
    <type>Text</type>
</CustomField>